src/components/base.css
html {
  position: relative;
  min-height: 100%;
}

body {
  line-height: 24px;
  color: #111;
  font-family: Arial, sans-serif;
  /* margin-bottom: 40px; */
}

blockquote,
body {
  font-size: 16px;
}
table {
  font-size: 80%;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
}
h1,
h2,
h3,
h4 {
  font-family: Arial, sans-serif;
  text-rendering: optimizeLegibility;
  padding-bottom: 4px;
}
h1:last-child,
h2:last-child,
h3:last-child,
h4:last-child {
  padding-bottom: 0;
}
h1 {
  font-weight: 400;
  font-size: 28px;
  line-height: 1.2;
}
h2 {
  font-weight: 700;
  font-size: 21px;
  line-height: 1.3;
}
h3 {
  font-weight: 700;
}
h3,
h4 {
  font-size: 17px;
  line-height: 1.255;
}
h4 {
  font-weight: 400;
}
h5 {
  font-size: 13px;
  line-height: 19px;
}
h5,
h6 {
  font-weight: 700;
}
h6 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 1.465;
  padding-bottom: 1px;
}
p {
  padding: 0;
  margin: 0 0 14px;
}
p:last-child {
  margin-bottom: 0;
}
p + p {
  margin-top: -4px;
}
b,
strong {
  font-weight: 700;
}
em,
i {
  font-style: italic;
}
blockquote {
  margin: 13px;
}
small {
  font-size: 12px;
}
a,
a:active,
a:link,
a:visited {
  color: #0066c0;
}
header {
  padding: 1.5em 0 0.5em;
}
code {
  color: #555;
  white-space: nowrap;
}

.scroll {
  overflow-x: scroll;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  scrollbar-width: none;
}

.scroll::-webkit-scrollbar {
  display: none;
}

.btn code {
  font-size: 10.5px;
}

.footer {
  /* position: absolute;
  bottom: 0; */
  width: 100%;
  height: 40px;
  line-height: 40px;
  text-align: right;
  font-size: 0.75em;
}

.poweredby {
  font-size: smaller;
  margin-top: 10px;
}

#thumbnail {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-height: 500px;
}

.tabs {
  margin-top: 25px;
}

.table th,
.table td {
  border: none;
  padding: 0.25rem;
  vertical-align: middle;
}

.table td.title {
  border-right: 1px solid #ddd;
}

.table td.group {
  border-radius: 5px;
  background-color: #ddd;
  padding-left: 7px;
}

.table td.group h4 {
  font-size: 14px;
  font-weight: normal;
  color: #555;
  text-transform: uppercase;
}

.table th {
  border-top: none;
  border-bottom: 1px solid #dee2e6;
}

/*  Breadcrumb Nav */

.breadcrumb {
  list-style: none;
  display: inline-block;
}
.breadcrumb .icon {
  font-size: 14px;
}
.breadcrumb li {
  float: left;
}
.breadcrumb li a {
  color: #EFEFEF ;
  display: block;
  background: #094E93 ;
  text-decoration: none;
  position: relative;
  height: 40px;
  line-height: 40px;
  padding: 0 10px 0 5px;
  text-align: center;
  margin-right: 23px;
  font-size: small;
}
.breadcrumb li span {
  color: #EFEFEF ;
  display: block;
  background: #094E93 ;
  text-decoration: none;
  position: relative;
  height: 40px;
  line-height: 40px;
  padding: 0 10px 0 5px;
  text-align: center;
  margin-right: 23px;
  font-size: small;
  width:100%
}

.breadcrumb li:nth-child(even) a {
  background-color: #094E93 ;
}
/* .breadcrumb li:nth-child(even) span {
  background-color: #2980b9;
} */

.breadcrumb li:nth-child(even) a:before {
  border-color: #094E93 ;
  border-left-color: transparent;
}

.breadcrumb li  span:before {
  border-color: #094E93 ;
  border-left-color: transparent;
}

.breadcrumb li:nth-child(even) a:after {
  border-left-color: #094E93 ;
}

.breadcrumb li span:after {
  border-left-color: #094E93 ;
}

.breadcrumb li:first-child a {
  padding-left: 15px;
}
.breadcrumb li:first-child a:before {
  border: none;
}
.breadcrumb li  span{
  padding-right: 15px;
}
.breadcrumb li span:after {
  border: none;
}
.breadcrumb li a:before, .breadcrumb li a:after {
  content: "";
  position: absolute;
  top: 0;
  border: 0 solid #094E93 ;
  border-width: 20px 10px;
  width: 0;
  height: 0;
}
.breadcrumb li span:before, .breadcrumb li span:after {
  content: "";
  position: absolute;
  top: 0;
  border: 0 solid #094E93 ;
  border-width: 20px 10px;
  width: 0;
  height: 0;
}

.breadcrumb li a:before {
  left: -20px;
  border-left-color: transparent;
}
.breadcrumb li span:before {
  left: -20px;
  border-left-color: transparent;
}
.breadcrumb li a:after {
  left: 100%;
  border-color: transparent;
  border-left-color: #094E93 ;
}
.breadcrumb li span:after {
  left: 100%;
  border-color: transparent;
  border-left-color: #094E93 ;
}
.breadcrumb li a:hover {
  background-color: #0E70D3 ;
}
.breadcrumb li a:hover:before {
  border-color: #0E70D3 ;
  border-left-color: transparent;
}
.breadcrumb li a:hover:after {
  border-left-color: #0E70D3 ;
}
.breadcrumb li span {
  background-color: #3E8CDB  ;
}
.breadcrumb li span:before {
  border-color: #3E8CDB  ;
  border-left-color: transparent;
}
.breadcrumb li span:after {
  border-left-color: #3E8CDB  ;
}

